@@ -1,5 +1,13 @@
 2011-03-26 Stefan Bidigaray <stefanbidi@gmail.com>
 
+	* Source/GNUmakefile:
+	* Source/CFRuntime.m:
+	* Source/CFNumberFormatter.c:
+	* Headers/CoreFoundation/CFNumberFormatter.h: New type.
+	* Tests/CFNumberFormatter/create.m: First couple of tests.
+
+2011-03-26 Stefan Bidigaray <stefanbidi@gmail.com>
+
 	* Source/CFLocale.c: (CFLocaleCopyDisplayNameForPropertyValue) Implemented.
 
 2011-03-26 Stefan Bidigaray <stefanbidi@gmail.com>
